--- a/app/assets/stylesheets/components/_suggestion.scss
+++ b/app/assets/stylesheets/components/_suggestion.scss
@@ -23,3 +23,11 @@ scale: 150%;
     }
   }
 }
+
+#comments-container {
+  background-color: $porcelain;
+  border-radius: 8px;
+  padding: 10px;
+  margin-bottom: 10px;
+  box-shadow: 1px 1px 6px 1px rgba(0, 0, 0, 0.2);
+}
