--- a/app/assets/stylesheets/components/_suggestions_board.scss
+++ b/app/assets/stylesheets/components/_suggestions_board.scss
@@ -74,3 +74,14 @@
     font-size: 24px;
   }
 }
+
+#warning {
+  color: $lilac;
+  font-size: 14px;
+  margin: 10px;
+  font-weight: 600;
+  background-color: #ffba9753;
+  padding: 5px;
+  border-radius: 8px;
+  text-align: center;
+}
